--- a/src/MusicSharingForm.form
+++ b/src/MusicSharingForm.form
@@ -58,18 +58,84 @@
               <text value="Select Sharing Folder"/>
             </properties>
           </component>
-          <hspacer id="da35e">
-            <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.7" weighty="0.0"/>
-            </constraints>
-          </hspacer>
           <vspacer id="5a8f4">
             <constraints>
               <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
               <gridbag weightx="0.0" weighty="0.95"/>
             </constraints>
           </vspacer>
+          <grid id="98348" layout-manager="GridBagLayout">
+            <constraints>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.5" weighty="0.0"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="d6a0f" class="javax.swing.JLabel">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.1" weighty="0.5"/>
+                </constraints>
+                <properties>
+                  <text value="Search for song"/>
+                </properties>
+              </component>
+              <hspacer id="f66e6">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.9" weighty="0.0"/>
+                </constraints>
+              </hspacer>
+              <component id="10a5b" class="javax.swing.JTextField" binding="searchTxf">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                    <preferred-size width="150" height="-1"/>
+                  </grid>
+                  <gridbag weightx="1.0" weighty="0.5"/>
+                </constraints>
+                <properties/>
+              </component>
+              <component id="9eb25" class="javax.swing.JButton" binding="searchBtn">
+                <constraints>
+                  <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.0"/>
+                </constraints>
+                <properties>
+                  <text value="Go!"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
+          <grid id="5d719" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
+            <constraints>
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="9027" class="javax.swing.JLabel">
+                <constraints/>
+                <properties>
+                  <text value="My port"/>
+                </properties>
+              </component>
+              <component id="756d" class="javax.swing.JTextField" binding="portTxf">
+                <constraints/>
+                <properties>
+                  <columns value="10"/>
+                  <text value="1234"/>
+                </properties>
+              </component>
+              <component id="ee62" class="javax.swing.JButton" binding="updatePortBtn">
+                <constraints/>
+                <properties>
+                  <text value="Update!"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
         </children>
       </grid>
     </children>
