--- a/src/MusicSharingForm.form
+++ b/src/MusicSharingForm.form
@@ -16,7 +16,7 @@
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <preferred-size width="200" height="200"/>
           </grid>
-          <gridbag weightx="1.0" weighty="1.0"/>
+          <gridbag weightx="1.0" weighty="0.3"/>
         </constraints>
         <properties>
           <dividerLocation value="400"/>
@@ -44,7 +44,7 @@
       <grid id="5f415" layout-manager="GridBagLayout">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-          <gridbag weightx="0.0" weighty="1.0"/>
+          <gridbag weightx="0.0" weighty="0.5"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -52,7 +52,7 @@
           <component id="3b3a4" class="javax.swing.JButton" binding="selectFolderBtn">
             <constraints>
               <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.4" weighty="0.3"/>
+              <gridbag weightx="0.4" weighty="0.0"/>
             </constraints>
             <properties>
               <text value="Select Sharing Folder"/>
@@ -61,7 +61,7 @@
           <grid id="98348" layout-manager="GridBagLayout">
             <constraints>
               <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.5" weighty="0.3"/>
+              <gridbag weightx="0.5" weighty="0.0"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -101,10 +101,38 @@
               </component>
             </children>
           </grid>
+          <grid id="18ded" layout-manager="GridBagLayout">
+            <constraints>
+              <grid row="1" column="0" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="227d7" class="javax.swing.JButton" binding="addBtn">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.2"/>
+                </constraints>
+                <properties>
+                  <text value="Add Music"/>
+                </properties>
+              </component>
+              <component id="da253" class="javax.swing.JButton" binding="deleteBtn">
+                <constraints>
+                  <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                  <gridbag weightx="0.0" weighty="0.2"/>
+                </constraints>
+                <properties>
+                  <text value="Delete Music"/>
+                </properties>
+              </component>
+            </children>
+          </grid>
           <grid id="5d719" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
             <constraints>
-              <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="0.0" weighty="0.7"/>
+              <grid row="1" column="1" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="1" fill="1" indent="0" use-parent-layout="false"/>
+              <gridbag weightx="0.0" weighty="0.0"/>
             </constraints>
             <properties/>
             <border type="none"/>
@@ -130,24 +158,99 @@
               </component>
             </children>
           </grid>
-          <component id="227d7" class="javax.swing.JButton" binding="addBtn">
+          <splitpane id="3ae17" binding="hostControlPane">
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="1.0" weighty="0.7"/>
+              <grid row="1" column="2" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                <preferred-size width="200" height="200"/>
+              </grid>
+              <gridbag weightx="0.0" weighty="0.5"/>
             </constraints>
             <properties>
-              <text value="Add Music"/>
+              <orientation value="0"/>
             </properties>
-          </component>
-          <component id="da253" class="javax.swing.JButton" binding="deleteBtn">
-            <constraints>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-              <gridbag weightx="1.0" weighty="0.7"/>
-            </constraints>
-            <properties>
-              <text value="Delete Music"/>
-            </properties>
-          </component>
+            <border type="none"/>
+            <children>
+              <component id="669c9" class="javax.swing.JList" binding="hostList">
+                <constraints>
+                  <splitpane position="left"/>
+                </constraints>
+                <properties/>
+              </component>
+              <grid id="f1333" layout-manager="GridBagLayout">
+                <constraints>
+                  <splitpane position="right"/>
+                </constraints>
+                <properties/>
+                <border type="none"/>
+                <children>
+                  <hspacer id="bb9f6">
+                    <constraints>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <gridbag weightx="0.0" weighty="0.0"/>
+                    </constraints>
+                  </hspacer>
+                  <grid id="3c5f2" layout-manager="FlowLayout" hgap="5" vgap="5" flow-align="0">
+                    <constraints>
+                      <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+                      <gridbag weightx="0.3" weighty="0.0"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="c634a" class="javax.swing.JButton" binding="addHostButton" default-binding="true">
+                        <constraints/>
+                        <properties>
+                          <text value="Add host"/>
+                        </properties>
+                      </component>
+                      <component id="91c49" class="javax.swing.JTextField" binding="addHostIPTxf">
+                        <constraints/>
+                        <properties>
+                          <columns value="10"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
+                  <grid id="32fb5" layout-manager="GridBagLayout">
+                    <constraints>
+                      <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
+                      <gridbag weightx="0.5" weighty="0.0"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="3334a" class="javax.swing.JButton" binding="requestHostBtn">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                        <properties>
+                          <text value="Request from host"/>
+                        </properties>
+                      </component>
+                      <hspacer id="486e6">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                      </hspacer>
+                      <component id="1b8d4" class="javax.swing.JTextField" binding="requestHostIPTxf">
+                        <constraints>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                            <preferred-size width="150" height="-1"/>
+                          </grid>
+                          <gridbag weightx="0.0" weighty="0.0"/>
+                        </constraints>
+                        <properties>
+                          <columns value="10"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
+                </children>
+              </grid>
+            </children>
+          </splitpane>
         </children>
       </grid>
     </children>
